Change SkillSimpleId to a HashMap